--- a/lawn-basics/index.html
+++ b/lawn-basics/index.html
@@ -68,7 +68,7 @@
 <section class="grid">
   <article class="card">
   <h2 class="card-title"><a href="/lawn-basics/what-type-of-grass-do-i-have.html">What Type of Grass Do I Have</a></h2>
-  <p class="card-text">Practical guide in lawn and grass basics.</p>
+  <p class="card-text">Learn how to identify common lawn grasses by observing blades, spread patterns, color changes, and seasonal growth instead of relying on labels.</p>
   <a class="btn secondary" href="/lawn-basics/what-type-of-grass-do-i-have.html">Open</a>
 </article><article class="card">
   <h2 class="card-title"><a href="/lawn-basics/warm-season-vs-cool-season-grasses-explained.html">Warm Season vs Cool Season Grasses Explained</a></h2>
