--- a/index.html
+++ b/index.html
@@ -64,28 +64,42 @@
   <h1>GrizzlyGreens</h1>
   <p class="subtitle">Fast, practical lawn and yard knowledge. No fluff.</p>
 </header>
-
 <section class="grid">
-  <article class="card">
-  <h2 class="card-title"><a href="/lawn-basics/">Lawn and Grass Basics</a></h2>
+  <article class="card card-link">
+  <a class="card-hit" href="/lawn-basics/" aria-label="Lawn and Grass Basics"></a>
+  <h2 class="card-title">Lawn and Grass Basics</h2>
   <p class="card-text">Grass types, mowing basics, common problems, and practical fixes.</p>
-  <a class="btn secondary" href="/lawn-basics/">Open hub</a>
-</article><article class="card">
-  <h2 class="card-title"><a href="/weeds-pests/">Weeds, Pests, &amp; Lawn Diseases</a></h2>
+  <div class="card-actions">
+    <span class="card-cta">Read article →</span>
+  </div>
+</article><article class="card card-link">
+  <a class="card-hit" href="/weeds-pests/" aria-label="Weeds, Pests, &amp; Lawn Diseases"></a>
+  <h2 class="card-title">Weeds, Pests, &amp; Lawn Diseases</h2>
   <p class="card-text">Identification first, then control: weeds, insects, and common lawn diseases.</p>
-  <a class="btn secondary" href="/weeds-pests/">Open hub</a>
-</article><article class="card">
-  <h2 class="card-title"><a href="/watering-irrigation/">Watering, Irrigation, &amp; Drainage</a></h2>
+  <div class="card-actions">
+    <span class="card-cta">Read article →</span>
+  </div>
+</article><article class="card card-link">
+  <a class="card-hit" href="/watering-irrigation/" aria-label="Watering, Irrigation, &amp; Drainage"></a>
+  <h2 class="card-title">Watering, Irrigation, &amp; Drainage</h2>
   <p class="card-text">Watering schedules, sprinkler setups, drainage issues, and fixes that work.</p>
-  <a class="btn secondary" href="/watering-irrigation/">Open hub</a>
-</article><article class="card">
-  <h2 class="card-title"><a href="/soil-fertilizer/">Soil, Fertilizer, &amp; Amendments</a></h2>
+  <div class="card-actions">
+    <span class="card-cta">Read article →</span>
+  </div>
+</article><article class="card card-link">
+  <a class="card-hit" href="/soil-fertilizer/" aria-label="Soil, Fertilizer, &amp; Amendments"></a>
+  <h2 class="card-title">Soil, Fertilizer, &amp; Amendments</h2>
   <p class="card-text">Soil basics, nutrients, pH, and amendments that actually move the needle.</p>
-  <a class="btn secondary" href="/soil-fertilizer/">Open hub</a>
-</article><article class="card">
-  <h2 class="card-title"><a href="/tools-safety/">Tools, Equipment, &amp; Yard Safety</a></h2>
+  <div class="card-actions">
+    <span class="card-cta">Read article →</span>
+  </div>
+</article><article class="card card-link">
+  <a class="card-hit" href="/tools-safety/" aria-label="Tools, Equipment, &amp; Yard Safety"></a>
+  <h2 class="card-title">Tools, Equipment, &amp; Yard Safety</h2>
   <p class="card-text">Tools that matter, maintenance, and safety rules that prevent dumb injuries.</p>
-  <a class="btn secondary" href="/tools-safety/">Open hub</a>
+  <div class="card-actions">
+    <span class="card-cta">Read article →</span>
+  </div>
 </article>
 </section>
   </main>
