--- a/base.html
+++ b/base.html
@@ -74,6 +74,6 @@
   </footer>
 
   <!-- This must exist at /search.js in your repo root -->
-  <script src="/search.js" defer></script>
+   <script src="/search.js"></script>
 </body>
 </html>
