--- a/index.html
+++ b/index.html
@@ -60,46 +60,45 @@
   </header>
 
   <main class="container">
-    <header class="hero">
-  <h1>GrizzlyGreens</h1>
-  <p class="subtitle">Fast, practical lawn and yard knowledge. No fluff.</p>
-</header>
-<section class="grid">
+    <h1>GrizzlyGreens</h1>
+<p>Fast, practical lawn and yard knowledge. No fluff.</p>
+
+<section class="cards">
   <article class="card card-link">
   <a class="card-hit" href="/lawn-basics/" aria-label="Lawn and Grass Basics"></a>
-  <h2 class="card-title">Lawn and Grass Basics</h2>
-  <p class="card-text">Grass types, mowing basics, common problems, and practical fixes.</p>
-  <div class="card-actions">
-    <span class="card-cta">Read article →</span>
-  </div>
+
+  <h2><a class="card-title-link" href="/lawn-basics/">Lawn and Grass Basics</a></h2>
+  <p class="card-blurb">Grass types, mowing basics, common problems, and practical fixes.</p>
+
+  <a class="read-more" href="/lawn-basics/">Read article</a>
 </article><article class="card card-link">
   <a class="card-hit" href="/weeds-pests/" aria-label="Weeds, Pests, &amp; Lawn Diseases"></a>
-  <h2 class="card-title">Weeds, Pests, &amp; Lawn Diseases</h2>
-  <p class="card-text">Identification first, then control: weeds, insects, and common lawn diseases.</p>
-  <div class="card-actions">
-    <span class="card-cta">Read article →</span>
-  </div>
+
+  <h2><a class="card-title-link" href="/weeds-pests/">Weeds, Pests, &amp; Lawn Diseases</a></h2>
+  <p class="card-blurb">Identification first, then control: weeds, insects, and common lawn diseases.</p>
+
+  <a class="read-more" href="/weeds-pests/">Read article</a>
 </article><article class="card card-link">
   <a class="card-hit" href="/watering-irrigation/" aria-label="Watering, Irrigation, &amp; Drainage"></a>
-  <h2 class="card-title">Watering, Irrigation, &amp; Drainage</h2>
-  <p class="card-text">Watering schedules, sprinkler setups, drainage issues, and fixes that work.</p>
-  <div class="card-actions">
-    <span class="card-cta">Read article →</span>
-  </div>
+
+  <h2><a class="card-title-link" href="/watering-irrigation/">Watering, Irrigation, &amp; Drainage</a></h2>
+  <p class="card-blurb">Watering schedules, sprinkler setups, drainage issues, and fixes that work.</p>
+
+  <a class="read-more" href="/watering-irrigation/">Read article</a>
 </article><article class="card card-link">
   <a class="card-hit" href="/soil-fertilizer/" aria-label="Soil, Fertilizer, &amp; Amendments"></a>
-  <h2 class="card-title">Soil, Fertilizer, &amp; Amendments</h2>
-  <p class="card-text">Soil basics, nutrients, pH, and amendments that actually move the needle.</p>
-  <div class="card-actions">
-    <span class="card-cta">Read article →</span>
-  </div>
+
+  <h2><a class="card-title-link" href="/soil-fertilizer/">Soil, Fertilizer, &amp; Amendments</a></h2>
+  <p class="card-blurb">Soil basics, nutrients, pH, and amendments that actually move the needle.</p>
+
+  <a class="read-more" href="/soil-fertilizer/">Read article</a>
 </article><article class="card card-link">
   <a class="card-hit" href="/tools-safety/" aria-label="Tools, Equipment, &amp; Yard Safety"></a>
-  <h2 class="card-title">Tools, Equipment, &amp; Yard Safety</h2>
-  <p class="card-text">Tools that matter, maintenance, and safety rules that prevent dumb injuries.</p>
-  <div class="card-actions">
-    <span class="card-cta">Read article →</span>
-  </div>
+
+  <h2><a class="card-title-link" href="/tools-safety/">Tools, Equipment, &amp; Yard Safety</a></h2>
+  <p class="card-blurb">Tools that matter, maintenance, and safety rules that prevent dumb injuries.</p>
+
+  <a class="read-more" href="/tools-safety/">Read article</a>
 </article>
 </section>
   </main>
@@ -115,6 +114,6 @@
   </footer>
 
   <!-- This must exist at /search.js in your repo root -->
-  <script src="/search.js" defer></script>
+   <script src="/search.js"></script>
 </body>
 </html>
