--- a/lawn-basics/how-long-it-takes-grass-to-germinate.html
+++ b/lawn-basics/how-long-it-takes-grass-to-germinate.html
@@ -6,7 +6,7 @@
 
   <title>How Long It Takes Grass to Germinate</title>
   <meta name="description" content="Grass germination timelines explained by species, soil temperature, moisture, and seed quality, including why some lawns sprout fast while others stall.">
-  <link rel="canonical" href="https://grizzlygreens.net/lawn-basics/how-long-it-takes-grass-to-germinate.json.html">
+  <link rel="canonical" href="https://grizzlygreens.net/lawn-basics/how-long-it-takes-grass-to-germinate.html">
 
   <link rel="stylesheet" href="/styles.css">
   <link rel="icon" href="/favicon.ico">
@@ -16,7 +16,7 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="How Long It Takes Grass to Germinate">
   <meta property="og:description" content="Grass germination timelines explained by species, soil temperature, moisture, and seed quality, including why some lawns sprout fast while others stall.">
-  <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/how-long-it-takes-grass-to-germinate.json.html">
+  <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/how-long-it-takes-grass-to-germinate.html">
 
   <!-- Google tag -->
   <!-- Google tag (gtag.js) -->
