--- a/lawn-basics/how-short-is-too-short-to-cut-grass.html
+++ b/lawn-basics/how-short-is-too-short-to-cut-grass.html
@@ -6,7 +6,7 @@
 
   <title>How Short Is Too Short to Cut Grass</title>
   <meta name="description" content="Cutting grass too short explained, including crown exposure, root loss, heat stress, and why low cuts often backfire.">
-  <link rel="canonical" href="https://grizzlygreens.net/lawn-basics/how-short-is-too-short-to-cut-grass.json.html">
+  <link rel="canonical" href="https://grizzlygreens.net/lawn-basics/how-short-is-too-short-to-cut-grass.html">
 
   <link rel="stylesheet" href="/styles.css">
   <link rel="icon" href="/favicon.ico">
@@ -16,7 +16,7 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="How Short Is Too Short to Cut Grass">
   <meta property="og:description" content="Cutting grass too short explained, including crown exposure, root loss, heat stress, and why low cuts often backfire.">
-  <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/how-short-is-too-short-to-cut-grass.json.html">
+  <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/how-short-is-too-short-to-cut-grass.html">
 
   <!-- Google tag -->
   <!-- Google tag (gtag.js) -->
