--- a/lawn-basics/index.html
+++ b/lawn-basics/index.html
@@ -64,7 +64,6 @@
   <h1>Lawn and Grass Basics</h1>
   <p class="subtitle">Grass types, mowing basics, common problems, and practical fixes.</p>
 </section>
-
 <section class="cards">
   <article class="card card-link">
   <a class="card-hit" href="/lawn-basics/what-type-of-grass-do-i-have.html" aria-label="What Type of Grass Do I Have"></a>
@@ -74,7 +73,7 @@
 </article><article class="card card-link">
   <a class="card-hit" href="/lawn-basics/warm-season-vs-cool-season-grasses-explained.html" aria-label="Warm Season vs Cool Season Grasses Explained"></a>
   <h2><a class="card-title-link" href="/lawn-basics/warm-season-vs-cool-season-grasses-explained.html">Warm Season vs Cool Season Grasses Explained</a></h2>
-  <p class="card-blurb">Grass types, mowing basics, common problems, and practical fixes.</p>
+  <p class="card-blurb">A practical breakdown of warm-season versus cool-season turf, with quick tells, seasonal behavior, and what changes in care across the year.</p>
   <a class="read-more" href="/lawn-basics/warm-season-vs-cool-season-grasses-explained.html">Read article</a>
 </article><article class="card card-link">
   <a class="card-hit" href="/lawn-basics/best-grass-types-for-hot-dry-climates.html" aria-label="Best Grass Types for Hot Dry Climates"></a>
@@ -89,37 +88,37 @@
 </article><article class="card card-link">
   <a class="card-hit" href="/lawn-basics/how-grass-actually-grows.html" aria-label="How Grass Actually Grows"></a>
   <h2><a class="card-title-link" href="/lawn-basics/how-grass-actually-grows.html">How Grass Actually Grows</a></h2>
-  <p class="card-blurb">Grass types, mowing basics, common problems, and practical fixes.</p>
+  <p class="card-blurb">A clear explanation of how grass really grows, including crowns, roots, leaf blades, and why mowing does not work the way most people think.</p>
   <a class="read-more" href="/lawn-basics/how-grass-actually-grows.html">Read article</a>
 </article><article class="card card-link">
   <a class="card-hit" href="/lawn-basics/how-long-it-takes-grass-to-germinate.html" aria-label="How Long It Takes Grass to Germinate"></a>
   <h2><a class="card-title-link" href="/lawn-basics/how-long-it-takes-grass-to-germinate.html">How Long It Takes Grass to Germinate</a></h2>
-  <p class="card-blurb">Grass types, mowing basics, common problems, and practical fixes.</p>
+  <p class="card-blurb">A practical breakdown of how long grass takes to germinate, what slows it down, and why uneven sprouting is normal early on.</p>
   <a class="read-more" href="/lawn-basics/how-long-it-takes-grass-to-germinate.html">Read article</a>
 </article><article class="card card-link">
   <a class="card-hit" href="/lawn-basics/why-grass-turns-yellow.html" aria-label="Why Grass Turns Yellow"></a>
   <h2><a class="card-title-link" href="/lawn-basics/why-grass-turns-yellow.html">Why Grass Turns Yellow</a></h2>
-  <p class="card-blurb">Grass types, mowing basics, common problems, and practical fixes.</p>
+  <p class="card-blurb">Yellow grass is a stress signal. This explains the real causes, how to narrow them down, and why color often changes before growth stops.</p>
   <a class="read-more" href="/lawn-basics/why-grass-turns-yellow.html">Read article</a>
 </article><article class="card card-link">
   <a class="card-hit" href="/lawn-basics/why-grass-turns-brown.html" aria-label="Why Grass Turns Brown"></a>
   <h2><a class="card-title-link" href="/lawn-basics/why-grass-turns-brown.html">Why Grass Turns Brown</a></h2>
-  <p class="card-blurb">Grass types, mowing basics, common problems, and practical fixes.</p>
+  <p class="card-blurb">Brown grass signals shutdown or death. This breaks down the causes and how to tell temporary dormancy from permanent damage.</p>
   <a class="read-more" href="/lawn-basics/why-grass-turns-brown.html">Read article</a>
 </article><article class="card card-link">
   <a class="card-hit" href="/lawn-basics/why-grass-grows-unevenly.html" aria-label="Why Grass Grows Unevenly"></a>
   <h2><a class="card-title-link" href="/lawn-basics/why-grass-grows-unevenly.html">Why Grass Grows Unevenly</a></h2>
-  <p class="card-blurb">Grass types, mowing basics, common problems, and practical fixes.</p>
+  <p class="card-blurb">Patchy or uneven growth is normal. This explains why some areas thrive while others lag behind.</p>
   <a class="read-more" href="/lawn-basics/why-grass-grows-unevenly.html">Read article</a>
 </article><article class="card card-link">
   <a class="card-hit" href="/lawn-basics/how-often-grass-should-be-mowed.html" aria-label="How Often Grass Should Be Mowed"></a>
   <h2><a class="card-title-link" href="/lawn-basics/how-often-grass-should-be-mowed.html">How Often Grass Should Be Mowed</a></h2>
-  <p class="card-blurb">Grass types, mowing basics, common problems, and practical fixes.</p>
+  <p class="card-blurb">Mowing too often or too rarely both cause damage. This explains how to time cuts based on growth, not habit.</p>
   <a class="read-more" href="/lawn-basics/how-often-grass-should-be-mowed.html">Read article</a>
 </article><article class="card card-link">
   <a class="card-hit" href="/lawn-basics/how-short-is-too-short-to-cut-grass.html" aria-label="How Short Is Too Short to Cut Grass"></a>
   <h2><a class="card-title-link" href="/lawn-basics/how-short-is-too-short-to-cut-grass.html">How Short Is Too Short to Cut Grass</a></h2>
-  <p class="card-blurb">Grass types, mowing basics, common problems, and practical fixes.</p>
+  <p class="card-blurb">Short grass looks neat but carries risk. This explains when cutting too low causes damage and slow recovery.</p>
   <a class="read-more" href="/lawn-basics/how-short-is-too-short-to-cut-grass.html">Read article</a>
 </article><article class="card card-link">
   <a class="card-hit" href="/lawn-basics/what-happens-if-you-cut-grass-too-short.html" aria-label="What Happens If You Cut Grass Too Short"></a>
