--- a/lawn-basics/why-grass-grows-unevenly.html
+++ b/lawn-basics/why-grass-grows-unevenly.html
@@ -6,7 +6,7 @@
 
   <title>Why Grass Grows Unevenly</title>
   <meta name="description" content="Uneven grass growth explained by soil variation, sunlight differences, moisture patterns, and root competition across a lawn.">
-  <link rel="canonical" href="https://grizzlygreens.net/lawn-basics/why-grass-grows-unevenly.json.html">
+  <link rel="canonical" href="https://grizzlygreens.net/lawn-basics/why-grass-grows-unevenly.html">
 
   <link rel="stylesheet" href="/styles.css">
   <link rel="icon" href="/favicon.ico">
@@ -16,7 +16,7 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="Why Grass Grows Unevenly">
   <meta property="og:description" content="Uneven grass growth explained by soil variation, sunlight differences, moisture patterns, and root competition across a lawn.">
-  <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/why-grass-grows-unevenly.json.html">
+  <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/why-grass-grows-unevenly.html">
 
   <!-- Google tag -->
   <!-- Google tag (gtag.js) -->
