--- a/lawn-basics/why-grass-turns-brown.html
+++ b/lawn-basics/why-grass-turns-brown.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>How Often Grass Should Be Mowed</title>
-  <meta name="description" content="How mowing frequency depends on growth rate, season, grass type, and stress levels rather than fixed weekly schedules.">
-  <link rel="canonical" href="https://grizzlygreens.net/lawn-basics/how-often-grass-should-be-mowed.json.html">
+  <title>Why Grass Turns Brown</title>
+  <meta name="description" content="Reasons grass turns brown, from drought and heat stress to mowing damage, dormancy, and root failure that stop active growth.">
+  <link rel="canonical" href="https://grizzlygreens.net/lawn-basics/why-grass-turns-brown.html">
 
   <link rel="stylesheet" href="/styles.css">
   <link rel="icon" href="/favicon.ico">
@@ -14,9 +14,9 @@
 
   <!-- Open Graph -->
   <meta property="og:type" content="website">
-  <meta property="og:title" content="How Often Grass Should Be Mowed">
-  <meta property="og:description" content="How mowing frequency depends on growth rate, season, grass type, and stress levels rather than fixed weekly schedules.">
-  <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/how-often-grass-should-be-mowed.json.html">
+  <meta property="og:title" content="Why Grass Turns Brown">
+  <meta property="og:description" content="Reasons grass turns brown, from drought and heat stress to mowing damage, dormancy, and root failure that stop active growth.">
+  <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/why-grass-turns-brown.html">
 
   <!-- Google tag -->
   <!-- Google tag (gtag.js) -->
@@ -60,39 +60,39 @@
   </header>
 
   <main class="container">
-    <h1>How Often Grass Should Be Mowed</h1>
+    <h1>Why Grass Turns Brown</h1>
 
-<h2>Mowing follows growth, not the calendar</h2>
-<p>Grass should be cut based on how fast it grows.</p>
-<p>Growth speed changes with season and weather.</p>
+<h2>Brown means growth has stopped</h2>
+<p>Brown blades no longer photosynthesize.</p>
+<p>The cause determines whether recovery is possible.</p>
 
-<h2>The one-third rule</h2>
-<p>Removing too much leaf shocks the plant.</p>
-<p>Frequent light cuts maintain balance.</p>
+<h2>Drought and heat stress</h2>
+<p>Extended dryness forces grass into survival mode.</p>
+<p>Leaf tissue dries out to protect the crown.</p>
 
-<h2>Seasonal differences</h2>
-<p>Spring growth often requires more frequent mowing.</p>
-<p>Summer stress slows growth and reduces frequency.</p>
+<h2>Natural dormancy</h2>
+<p>Some grasses turn brown to conserve energy.</p>
+<p>Dormant grass can recover when conditions improve.</p>
 
-<h2>Grass type matters</h2>
-<p>Warm-season and cool-season grasses grow differently.</p>
-<p>Each has its own active growth window.</p>
+<h2>Root failure</h2>
+<p>Damaged or shallow roots cannot support growth.</p>
+<p>This often follows overwatering or compaction.</p>
 
-<h2>Weather effects</h2>
-<p>Rain accelerates growth.</p>
-<p>Drought and heat slow it down.</p>
+<h2>Mowing damage</h2>
+<p>Scalping exposes crowns to heat.</p>
+<p>Recovery slows or stops after repeated stress.</p>
 
-<h2>Mower height influence</h2>
-<p>Lower cuts require tighter mowing schedules.</p>
-<p>Higher cuts allow longer intervals.</p>
+<h2>Disease and pests</h2>
+<p>Root and crown damage cut off water flow.</p>
+<p>Brown patches often expand outward over time.</p>
 
-<h2>Signs mowing is too infrequent</h2>
-<p>Clumping and scalping increase.</p>
-<p>Recovery time lengthens.</p>
+<h2>Soil and surface heat</h2>
+<p>Hardscapes raise soil temperature.</p>
+<p>Grass near pavement browns first.</p>
 
-<h2>Consistency beats perfection</h2>
-<p>Regular adjustment matters more than exact timing.</p>
-<p>Healthy grass tolerates minor variation.</p>
+<h2>Brown does not always mean dead</h2>
+<p>Check crowns and roots before replacement.</p>
+<p>Many lawns rebound after stress passes.</p>
   </main>
 
   <footer class="site-footer">
