--- a/lawn-basics/why-grass-turns-yellow.html
+++ b/lawn-basics/why-grass-turns-yellow.html
@@ -6,7 +6,7 @@
 
   <title>Why Grass Turns Yellow</title>
   <meta name="description" content="Common reasons grass turns yellow, including nutrient issues, watering problems, soil stress, and seasonal slowdowns that reduce chlorophyll.">
-  <link rel="canonical" href="https://grizzlygreens.net/lawn-basics/why-grass-turns-yellow.json.html">
+  <link rel="canonical" href="https://grizzlygreens.net/lawn-basics/why-grass-turns-yellow.html">
 
   <link rel="stylesheet" href="/styles.css">
   <link rel="icon" href="/favicon.ico">
@@ -16,7 +16,7 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="Why Grass Turns Yellow">
   <meta property="og:description" content="Common reasons grass turns yellow, including nutrient issues, watering problems, soil stress, and seasonal slowdowns that reduce chlorophyll.">
-  <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/why-grass-turns-yellow.json.html">
+  <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/why-grass-turns-yellow.html">
 
   <!-- Google tag -->
   <!-- Google tag (gtag.js) -->
