--- a/lawn-basics/warm-season-vs-cool-season-grasses-explained.html
+++ b/lawn-basics/warm-season-vs-cool-season-grasses-explained.html
@@ -6,7 +6,7 @@
 
   <title>Warm Season vs Cool Season Grasses Explained</title>
   <meta name="description" content="Clear differences between warm-season and cool-season grasses, when each thrives, and how growth patterns affect mowing, watering, and color.">
-  <link rel="canonical" href="https://grizzlygreens.net/lawn-basics/warm-season-vs-cool-season-grasses-explained.json.html">
+  <link rel="canonical" href="https://grizzlygreens.net/lawn-basics/warm-season-vs-cool-season-grasses-explained.html">
 
   <link rel="stylesheet" href="/styles.css">
   <link rel="icon" href="/favicon.ico">
@@ -16,7 +16,7 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="Warm Season vs Cool Season Grasses Explained">
   <meta property="og:description" content="Clear differences between warm-season and cool-season grasses, when each thrives, and how growth patterns affect mowing, watering, and color.">
-  <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/warm-season-vs-cool-season-grasses-explained.json.html">
+  <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/warm-season-vs-cool-season-grasses-explained.html">
 
   <!-- Google tag -->
   <!-- Google tag (gtag.js) -->
@@ -119,6 +119,6 @@
   </footer>
 
   <!-- This must exist at /search.js in your repo root -->
-  <script src="/search.js" defer></script>
+   <script src="/search.js"></script>
 </body>
 </html>
